--- a/app/views/devise/shared/_head.html.haml
+++ b/app/views/devise/shared/_head.html.haml
@@ -2,12 +2,12 @@
   %meta{ :charset => 'utf-8' }/
   %meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }/
 
-  = display_meta_tags :site => 'Seed Site', :title => page_title, :reverse => true
+  = display_meta_tags :site => 'Joanna Cleaning App', :title => page_title, :reverse => true
 
   %meta{ :name => 'description', :content => '' }/
   %meta{ :name => 'viewport', :content => 'width=device-width' }/
 
-  = render 'stylesheets'
+  = render 'devise/shared/stylesheets'
   = javascript_include_tag 'modernizr'
 
   = csrf_meta_tag
