minor issues regarding deployment

--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -10,7 +10,7 @@
     = yield
 
     = render 'devise/shared/footer'
-    = render 'devise/shared/flashes'
+    -#= render 'devise/shared/flashes'
 
     -# Javascript at the bottom for fast page loading
     = render 'devise/shared/javascripts'
