change the cafe themes

--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -3,6 +3,7 @@
 *= require bootstrap
 *= require custom
 *= require entypo
+*= require cafe
 *= require jquery-ui-1.10.3.custom.min
 *= require neon-core
 *= require neon-forms
