--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,11 +1,10 @@
 /*
-
-*= require bootstrap
-*= require custom
-*= require entypo
 *= require jquery-ui-1.10.3.custom.min
+*= require entypo
+*= require bootstrap
 *= require neon-core
-*= require neon-forms
 *= require neon-theme
-
- */
+*= require neon-forms
+*= require custom
+*= require cafe
+*/
