--- a/app/views/devise/shared/_stylesheets.html.haml
+++ b/app/views/devise/shared/_stylesheets.html.haml
@@ -1,4 +1,3 @@
-= stylesheet_link_tag 'devise', :media => nil
-
--# Append your own using content_for :stylesheets
+%link{:href => "//fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic", :rel => "stylesheet"}/
+= stylesheet_link_tag :devise
 = yield :stylesheets
