--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,26 +1,7 @@
--#.container
-  .row
-    .profile.center
-      = panel title: 'Forgot your password?', context: :primary do
-        = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }, wrapper: :horizontal_form, wrapper_mappings: { check_boxes: :horizontal_radio_and_checkboxes, boolean: :horizontal_boolean } ) do |f|
-          .panel-body
-            = f.error_notification
-
-            .form-inputs
-              = f.input :email, required: true, autofocus: true
-          .panel-footer
-            .buttons
-              = f.button :submit, "Send me reset password instructions", class: "btn-primary"
-
-            .links
-              = render "devise/shared/links"
-:javascript
-  var baseurl = '';
-
 .login-container
   .login-header.login-caret
     .login-content
-      %a.logo{:href => "index.html"}
+      %a.logo{:href => "#{root_path}"}
         = image_tag('logo_1.png',class: 'img', width:'130')
       %p.description Dear user, log in to access the admin area!
       .login-progressbar-indicator
