add employees customers and calender basic structure

--- a/app/views/backend/admin/employees/index.html.haml
+++ b/app/views/backend/admin/employees/index.html.haml
@@ -1,2 +1,89 @@
-%h1
-  Employees
+%hr/
+%ol.breadcrumb.bc-3
+  %li
+    %a{:href => "index.html"}
+      %i.fa-home>
+      Home
+  %li.active
+    %a{:href => "extra-icons.html"} Employees
+.row
+  .col-md-9.col-sm-7
+    %h2 Employees
+  .col-md-3.col-sm-5
+    %form.search-form-full{:method => "get", :role => "form"}
+      .form-group
+        %input#search-input.form-control{:name => "s", :placeholder => "Search...", :type => "text"}/
+        %i.entypo-search
+/ Member Entries
+/ Single Member
+.member-entry
+  %a.member-img{:href => "extra-timeline.html"}
+    %img.img-rounded{:src => "assets/images/member-1.jpg"}/
+    %i.entypo-forward
+  .member-details
+    %h4
+      %a{:href => "extra-timeline.html"} Johnnie Linton
+    / Details with Icons
+    .row.info-list
+      .col-sm-4
+        %i.entypo-briefcase
+        Co-Founder at
+        %a{:href => "#"} Complete Tech
+      .col-sm-4
+        %i.entypo-twitter
+        %a{:href => "#"} @johnnie
+      .col-sm-4
+        %i.entypo-facebook
+        %a{:href => "#"} fb.me/johnnie
+      .clear
+      .col-sm-4
+        %i.entypo-location
+        %a{:href => "#"} Prishtina
+      .col-sm-4
+        %i.entypo-mail
+        %a{:href => "#"} john@gmail.com
+      .col-sm-4
+        %i.entypo-linkedin
+        %a{:href => "#"} johnkennedy
+/ Single Member
+.member-entry
+  %a.member-img{:href => "extra-timeline.html"}
+    %img.img-rounded{:src => "assets/images/member-1.jpg"}/
+    %i.entypo-forward
+  .member-details
+    %h4
+      %a{:href => "extra-timeline.html"} Laura Fassett
+    / Details with Icons
+    .row.info-list
+      .col-sm-4
+        %i.entypo-briefcase
+        Dental Surgery Doctor at
+        %a{:href => "#"} Omni Realty
+      .col-sm-4
+        %i.entypo-twitter
+        %a{:href => "#"} @laurajFassett
+      .col-sm-4
+        %i.entypo-facebook
+        %a{:href => "#"} fb.me/Willne
+      .clear
+      .col-sm-4
+        %i.entypo-location
+        %a{:href => "#"} London
+      .col-sm-4
+        %i.entypo-mail
+        %a{:href => "#"} lara@inbox.com
+      .col-sm-4
+        %i.entypo-linkedin
+        %a{:href => "#"} LauraJFassett
+/ Pager for search results
+.row
+  .col-md-12
+    %ul.pager
+      %li
+        %a{:href => "#"}
+          %i.entypo-left-thin
+          Previous
+      %li
+        %a{:href => "#"}
+          Next
+          %i.entypo-right-thin
