--- a/app/views/backend/admin/shared/_left_sidebar.html.haml
+++ b/app/views/backend/admin/shared/_left_sidebar.html.haml
@@ -22,10 +22,18 @@
         %a{:href => "#{admin_dashboard_path}"}
           %i.entypo-gauge
           %span.title Dashboard
-      %li.active.has-sub
+      %li
+        = link_to admin_calender_path do
+          %i.entypo-calender
+          %span.title Calender
+      %li
         = link_to admin_employees_path do
           %i.entypo-users
           %span.title Employees
+      %li
+        = link_to admin_customers_path do
+          %i.entypo-users
+          %span.title Customers
       -#  %ul.visible
       -#    %li.active
       -#      %a{:href => "index.html"}
