--- a/app/views/backend/shared/_footer.html.haml
+++ b/app/views/backend/shared/_footer.html.haml
@@ -6,3 +6,8 @@
 -#      .col-xs-6.text-right
 -#        %small.copyright
 -#          T, Copyright &copy; #{ Date.today.year }
+/ Footer
+%footer.main
+  © #{ Date.today.year }
+  %strong Joanna
+  Cleaning Service
