--- a/app/views/backend/admin/employees/partials/_form.html.haml
+++ b/app/views/backend/admin/employees/partials/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @employee , class: 'form-horizontal form-groups-bordered validate' do |f|
+= form_for [:admin ,@employee ] , class: 'form-horizontal form-groups-bordered validate' do |f|
   .row
     .col-md-12
       .panel.panel-primary{"data-collapsed" => "0"}
@@ -12,23 +12,17 @@
               %i.entypo-arrows-ccw
         .panel-body{:style => "display: block;"}
           .form-group
-            %label.col-sm-3.control-label{:for => "field-1"} Site title
-            .col-sm-5
-              %input#field-1.form-control{:type => "text", :value => "Neon"}/
+            %label.col-sm-2.control-label.text-right{:for => "field-1"} First name
+            .col-sm-10
+              =f.text_field :first_name , class: 'form-control' , placeholder: 'Enter your first name'
           .form-group
-            %label.col-sm-3.control-label{:for => "field-2"} Tagline
-            .col-sm-5
-              %input#field-2.form-control{:type => "text", :value => "Bootstrap Admin Theme"}/
-              %span.description Few words that will describe your site.
+            %label.col-sm-2.control-label.text-right{:for => "field-1"} Last name
+            .col-sm-10
+              =f.text_field :last_name , class: 'form-control' , placeholder: 'Enter your Last name'
           .form-group
-            %label.col-sm-3.control-label{:for => "field-3"} Site URL
-            .col-sm-5
-              %input#field-3.form-control{"data-validate" => "required,url", :name => "site-url", :type => "text", :value => "http://exampledomain.com/neon"}/
-          .form-group
-            %label.col-sm-3.control-label{:for => "field-4"} Email address
-            .col-sm-5
-              %input#field-4.form-control{"data-validate" => "required,email", :name => "email", :type => "text", :value => "john@doe.com"}/
-              %span.description Here you will receive site notifications.
-  .form-group.default-padding
-    %button.btn.btn-success{:type => "submit"} Save Changes
+            %label.col-sm-2.control-label.text-right{:for => "field-1"} Email
+            .col-sm-10
+              =f.email_field :email , class: 'form-control' , placeholder: 'Enter your Email Address'
+  .form-group.default-padding.pull-right
+    = f.submit "Save Changes" , class: 'btn btn-success'
     %button.btn{:type => "reset"} Reset Previous
