employee onboarding views customize

--- a/app/views/backend/employee/dashboard/index.html.haml
+++ b/app/views/backend/employee/dashboard/index.html.haml
@@ -1,2 +1,1 @@
-%h1 Backend::Employee::Dashboard#index
-%p Find me in app/views/backend/employee/dashboard/index.html.haml
+%h1 Welcome #{current_user.full_name}
