--- a/app/views/users/invitations/edit.html.haml
+++ b/app/views/users/invitations/edit.html.haml
@@ -1,5 +1,27 @@
 - content_for :title do
   = t 'devise.invitations.edit.header'
+-#.container
+  .row
+    .center-panel
+      .panel.panel-default.only
+
+        .panel-heading
+          %h3.panel-title
+            = @title
+
+        .panel-body
+
+          = form_for resource, as: resource_name, url: invitation_path(resource_name), layout: :horizontal, html: { method: :put } do |f|
+
+            = devise_error_messages!
+
+            = f.hidden_field :invitation_token
+
+            = f.password_field :password
+            = f.password_field :password_confirmation
+
+            = f.submit "Add password"
+
 = form_for resource, as: resource_name, url: invitation_path(resource_name) , html: { id: 'form_register' ,method: :put } do |f|
   = devise_error_messages!
   = f.hidden_field :invitation_token
