add flash messages

--- a/app/views/backend/shared/_flashes.html.haml
+++ b/app/views/backend/shared/_flashes.html.haml
@@ -1,4 +1,25 @@
-- if !flash.empty?
-  .container#flash
-    - flash.each do |key, value|
-      = alert_box value, context: flash_class(key), dismissible: true
+- if flash[:alert].present? || flash[:toastr].present? || flash[:error].present? || flash[:errors].present? || flash[:success].present? || flash[:notice].present? || flash[:info].present?
+  :javascript
+    $(document).ready(function () {
+      $(window).load(function() {
+        if("#{flash[:error].present?}" == "true"){
+          flash_success("#{flash[:error]}");
+        }
+        else if("#{flash[:success].present?}" == "true"){
+          flash_success("#{flash[:success]}");
+        }
+        else if("#{flash[:info].present?}" == "true"){
+          flash_info("#{flash[:info]}");
+        }
+        else if("#{flash[:alert].present?}" == "true"){
+          flash_alert("#{flash[:alert]}");
+        }
+        else if("#{flash[:notice].present?}" == "true"){
+          flash_alert("#{flash[:notice]}");
+        }else if("#{flash[:errors].present?}" == "true"){
+         $.each(#{flash[:errors] || []}, function( index, value ) {
+            flash_error(value);
+          });
+        }
+      });
+    });
