flash messages fixes

--- a/app/views/backend/shared/_javascripts.html.haml
+++ b/app/views/backend/shared/_javascripts.html.haml
@@ -1,6 +1,5 @@
 = javascript_include_tag 'backend'
-
--#  Append your own using content_for :javascripts
+= render 'backend/shared/flashes'
 = yield :javascripts
 
 -# Google Analytics
