basic structure of customer module

--- a/app/views/backend/admin/customers/index.html.haml
+++ b/app/views/backend/admin/customers/index.html.haml
@@ -1,18 +1,64 @@
-%hr/
 %ol.breadcrumb.bc-3
   %li
-    %a{:href => "index.html"}
+    %a{:href => "#{admin_dashboard_path}"}
       %i.fa-home>
       Home
   %li.active
-    %a{:href => "extra-icons.html"} Customers
+    %a{:href => "#"} Customers
 .row
-  .col-md-9.col-sm-7
+  .col-md-6.col-sm-7
     %h2 Customers
-  .col-md-3.col-sm-5
-    %form.search-form-full{:method => "get", :role => "form"}
-      .form-group
-        %input#search-input.form-control{:name => "s", :placeholder => "Search...", :type => "text"}/
-        %i.entypo-search
+  .col-md-6.col-sm-5{style: 'margin-top: 20px;'}
+    -#.col-md-3
+      %form.search-form-full{:method => "get", :role => "form"}
+        .form-group
+          %input#search-input.form-control{:name => "s", :placeholder => "Search...", :type => "text"}/
+          %i.entypo-search
+    %a#add-note.btn.btn-primary.btn-icon.icon-left.pull-right{href: "#{new_admin_customer_path}"}
+      %i.entypo-user-add
+      New Customer
+
 / Member Entries
 / Single Member
+- @customers.each do |customer|
+  .member-entry
+    %a.member-img{:href => "#{admin_customer_path(customer)}"}
+      = image_tag customer.image , class: 'img-rounded'
+      %i.entypo-forward
+    .member-details
+      %h4
+        %a{:href => "#{admin_customer_path(customer)}"}= customer.full_name
+      / Details with Icons
+      .row.info-list
+        .col-sm-4
+          %i.entypo-briefcase
+          Co-Founder at
+          %a{:href => "#"} Complete Tech
+        .col-sm-4
+          %i.entypo-twitter
+          %a{:href => "#"} @johnnie
+        .col-sm-4
+          %i.entypo-facebook
+          %a{:href => "#"} fb.me/johnnie
+        .clear
+        .col-sm-4
+          %i.entypo-location
+          %a{:href => "#"} Prishtina
+        .col-sm-4
+          %i.entypo-mail
+          %a{:href => "#"}= customer.email
+        .col-sm-4
+          %i.entypo-linkedin
+          %a{:href => "#"} johnkennedy
+/ Pager for search results
+.row
+  .col-md-12
+    %ul.pager
+      %li
+        %a{:href => "#"}
+          %i.entypo-left-thin
+          Previous
+      %li
+        %a{:href => "#"}
+          Next
+          %i.entypo-right-thin
