--- a/app/views/backend/admin/customers/partials/_form.html.haml
+++ b/app/views/backend/admin/customers/partials/_form.html.haml
@@ -1,10 +1,10 @@
-= form_for [:admin ,@employee ] , class: 'form-horizontal form-groups-bordered validate' do |f|
+= form_for [:admin ,@customer ] , class: 'form-horizontal form-groups-bordered validate' , html: {novalidate: "novalidate"} do |f|
   .row
     .col-md-12
       .panel.panel-primary{"data-collapsed" => "0"}
         .panel-heading
           .panel-title
-            Employee Details
+            Customers Details
           .panel-options
             %a{"data-rel" => "collapse", :href => "#"}
               %i.entypo-down-open
@@ -28,6 +28,30 @@
                   .form-group
                     %label.control-label{:for => "full_name"} Email
                     =f.email_field :email , class: 'form-control' , placeholder: 'Enter email' , data: {"validate": "required"}
+              .row
+                .col-md-6
+                  .form-group
+                    %label.control-label{:for => "full_name"} Gender
+                    = f.select :gender, options_for_select(Customer.genders.collect { |s| [s[0].humanize, s[0]] }), {} , class: "form-control"
+                .col-md-6
+                  .form-group
+                    %label.control-label{:for => "full_name"} Telephone
+                    =f.text_field :phone , class: 'form-control' , placeholder: 'Enter phone' , data: {"validate": "required"}
+              .row
+                .col-md-12
+                  .form-group
+                    %label.control-label{:for => "full_name"} Address
+                    =f.email_field :street , class: 'form-control' , placeholder: 'Enter street address' , data: {"validate": "required"}
+              .row
+                .col-md-6
+                  .form-group
+                    %label.control-label{:for => "full_name"} City
+                    =f.text_field :city , class: 'form-control' , placeholder: 'Enter city name' , data: {"validate": "required"}
+                .col-md-6
+                  .form-group
+                    %label.control-label{:for => "full_name"} Postal Code
+                    =f.text_field :postcode , class: 'form-control' , placeholder: 'Enter postcode' , data: {"validate": "required"}
+
         .form-group.default-padding.pull-right{style: 'margin-top: 15px;'}
           = f.submit "Submit" , class: 'btn btn-success'
           %button.btn{:type => "reset"} Reset
