--- a/app/views/backend/admin/employees/partials/_form.html.haml
+++ b/app/views/backend/admin/employees/partials/_form.html.haml
@@ -24,10 +24,14 @@
                     %label.control-label{:for => "full_name"} Last name
                     =f.text_field :last_name , class: 'form-control' , placeholder: 'Enter last name' , data: {"validate": "required"}
               .row
-                .col-md-12
+                .col-md-6
                   .form-group
                     %label.control-label{:for => "full_name"} Email
                     =f.email_field :email , class: 'form-control' , placeholder: 'Enter email' , data: {"validate": "required"}
+                .col-md-6
+                  .form-group
+                    %label.control-label{:for => "full_name"} Hourly Rate£
+                    =f.number_field :hourly_rate , class: 'form-control' , placeholder: 'Enter Hourly Rate' , data: {"validate": "required"}
         .form-group.default-padding.pull-right{style: 'margin-top: 15px;'}
           = f.submit "Submit" , class: 'btn btn-success'
           %button.btn{:type => "reset"} Reset
