Devise invitable fixes

--- a/app/views/backend/admin/employees/index.html.haml
+++ b/app/views/backend/admin/employees/index.html.haml
@@ -43,7 +43,7 @@
         .clear
         .col-sm-4
           %i.entypo-location
-          %a{:href => "#"} Prishtina
+          %a{:href => "#"}= employee.full_address
         .col-sm-4
           %i.entypo-mail
           %a{:href => "#"}= employee.email
