Event module basic funtionality

--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -11,5 +11,6 @@
 *= require jquery-jvectormap-1.2.2
 *= require rickshaw
 *= require fullcalendar-2/fullcalendar.min
+*= require daterangepicker
 
  */
