--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,9 +1,9 @@
 <%= simple_form_for @event, remote: true do |f| %>
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :date_range, input_html: { class: "form-control input-sm date-range-picker" } %>
-    <%= f.input_field :start, as: :hidden, value: Date.today, class: 'form-control input-sm start_hidden' %>
-    <%= f.input_field :end, as: :hidden, value: Date.today, class: 'form-control input-sm end_hidden' %>
+    <%#= f.input :date_range, input_html: { class: "form-control input-sm date-range-picker" } %>
+    <%= f.input_field :start,  value: Date.today, class: 'form-control input-sm start_hidden' %>
+    <%= f.input_field :end, value: Date.today, class: 'form-control input-sm end_hidden' %>
     <%= f.input :color, as: :select, collection: [['Black','black'], ['Green','green'], ['Red','red']] %>
   </div>
 
