Event form UI Changes

--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -12,5 +12,6 @@
 *= require rickshaw
 *= require fullcalendar-2/fullcalendar.min
 *= require daterangepicker
+*= require bootstrap-datetimepicker
 
  */
