Change admin calender scope

--- a/app/views/backend/shared/_javascripts.html.haml
+++ b/app/views/backend/shared/_javascripts.html.haml
@@ -1,4 +1,5 @@
 = javascript_include_tag 'backend'
+= javascript_include_tag 'admin_full_calender'
 = render 'backend/shared/flashes'
 = yield :javascripts
 
