admin calender fixes

--- a/app/views/backend/admin/events/edit.js.erb
+++ b/app/views/backend/admin/events/edit.js.erb
@@ -1,3 +1,3 @@
-$('#remote_container').html('<%= j render "edit" %>');
+$('#remote_container').html('<%= j render "form" %>');
 $('#edit_event').modal('show');
 
