--- a/app/views/backend/admin/events/new.js.erb
+++ b/app/views/backend/admin/events/new.js.erb
@@ -1,3 +1,3 @@
-$('#remote_container').html('<%= j render "new" %>');
+$('#remote_container').html('<%= j render "form" %>');
 $('#new_event').modal('show');
 
